--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <img class="socialbutton" src="img/button 01 copy.png" alt=" Vanity Makeover Studio ">
                         </a>
 
-                        <a href="#home">
+                        <a href="https://www.instagram.com/vanitymakeoverstudio?igsh=MzZ4N3JxZnY4M2I3">
                             <img class="socialbutton" src="img/button 02 copy.png" alt=" Vanity Makeover Studio  ">
                         </a>
 
@@ -126,7 +126,7 @@
 
                         
 
-                        <a href="#home">
+                        <a href="https://www.instagram.com/vanitymakeoverstudio?igsh=MzZ4N3JxZnY4M2I3">
                             <img class="mbsocialbutton" src="img/button 02 copy 2.png" alt="Instagram ">
                             
                         </a>
